# foldar-cli

./: README.md  pyproject.toml
foldar/: __main__.py  code_templates.py
foldar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
